Fixed incorrect z-indexing

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ input {
     justify-content: center;
     align-items: center;
 
-    z-index: -1;
+    z-index: 0;
 
     border-radius: 50%;
 }
@@ -309,6 +309,7 @@ button:hover {
     top: 0;
     left: 0;
     position: fixed;
+    z-index: 999;
     width: 100%;
 
     padding: 2px 12px;
